# haskell-miso-starter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  haskell-miso-starter.cabal  miso-test.cabal  result
backend/: Main.hs
client/: Main.hs
frontend/: Main.hs
shared/: Common.hs
